[package]
name = "musescore-rip"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Download musescore scores as svg files"
repository = "https://github.com/lukaprsina/musescore-rip"
author = "Luka Pršina"
author_email = "prsinaluka@gmail.com"
keywords = ["musescore", "svg", "download"]
exclude = ["output/*"]

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
headless_chrome = "0.9.0"
reqwest = "0.11.9"
scraper = "0.12.0"
svg2pdf = "0.2.1"
tokio = { version = "1.16.1", features = ["full"] }
