[package]
name = "musescore-rip"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Download musescore scores as svg files"
repository = "https://github.com/lukaprsina/musescore-rip"
keywords = ["musescore", "svg", "download"]
exclude = ["output/*"]

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
hashbag = "0.1.4"
headless_chrome = "0.9.0"
reqwest = "0.11.9"
scraper = "0.12.0"
tokio = { version = "1.16.1", features = ["full"] }
url = "2.2.2"
